[package]
name = "harp_tracker"
version = "0.1.0"
description = "Ground Station GUI for High Altitude Ballooning"
authors = ["Ayush Sahoo", "Samhita Saragadam"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harp_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serialport = "4.7.0"
csv = "1.1"
dirs = "6.0.0"
dotenvy = "0.15.7"
